<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.visa.socialshare.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title_share"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/dummy_title"
        android:layout_toEndOf="@id/tv_title"
        android:layout_marginStart="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="10dp"
        android:id="@+id/tv_content"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="10dp"
        android:id="@+id/tv_content_share"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/dummy_content"
        android:layout_toEndOf="@id/tv_content"
        android:layout_marginStart="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_content"
        android:layout_marginTop="10dp"
        android:id="@+id/tv_subject"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/subject"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_content"
        android:layout_marginTop="10dp"
        android:id="@+id/tv_subject_share"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/dummy_subject"
        android:layout_toEndOf="@id/tv_subject"
        android:layout_marginStart="10dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/tv_subject"
        android:layout_marginTop="10dp"
        android:id="@+id/iv_share_image"
        android:src="@drawable/miami"
        android:scaleType="fitCenter"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/bt_share_default"
        android:textAllCaps="false"
        android:layout_below="@id/iv_share_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/share_through_default_dialog"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/bt_share_custom"
        android:textAllCaps="false"
        android:layout_below="@id/bt_share_default"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/share_through_custom_dialog"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/bt_share_customized_apps"
        android:textAllCaps="false"
        android:layout_below="@id/bt_share_custom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/share_to_customized_apps"/>
</RelativeLayout>
